--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.revature.gradingsystem</groupId>
-  <artifactId>gradingsystem-servlet</artifactId>
+  <artifactId>gradingsystem-api</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>gradingsystem-servlet Maven Webapp</name>
+  <name>gradingsystem-api Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
     	<dependencies>
@@ -51,6 +51,6 @@
 
 	</dependencies>
   <build>
-    <finalName>gradingsystem-servlet</finalName>
+    <finalName>gradingsystem-api</finalName>
   </build>
 </project>
